--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
 
     <nav>
         <ul>
-            <li><a href="#Grocery">Grocery</a></li>
+            <li><a href="#Meal-Box">Grocery</a></li>
             <li><a href="#Fruits">Fruits</a></li>
             <li><a href="#Vegetables">Vegetables</a></li>
             <li><a href="#Dairy">Dairy</a></li>
@@ -32,10 +32,10 @@
 
     <section class="content">
         <div class="category-card">
-            <img src="grocery.jpg" alt="Grocery">
-            <h3 id="Grocery">Grocery</h3>
-            <p>Find a wide range of groceries</p>
-            <button onclick="window.location.href='grocery.html';">Shop Now</button>
+            <img src="Meal-Box.jpg" alt="Grocery">
+            <h3 id="Meal-Box">Meal-Box</h3>
+            <p>Meal-Box for Gym Trainers</p>
+            <button onclick="window.location.href='{{ url_for('meals') }}';">Shop Now</button>
         </div>
 
         <div class="category-card">
