--- a/templates/register.html
+++ b/templates/register.html
@@ -17,7 +17,7 @@
         <input type="password" name="password" required><br><br>
         <label>Confirm Password:</label>
         <input type="password" name="confirm-password" required><br><br>
-        <button type="submit"><a href="{{ url_for('home') }}">Register</a></button>
+        <button type="submit"><a href="{{ url_for('signin') }}">Register</a></button>
     </form>
     <p>Already have an account? <a href="{{ url_for('signin') }}">Login here</a></p>
     
