--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
             <img src="Meal-Box.jpg" alt="Grocery">
             <h3 id="Meal-Box">Meal-Box</h3>
             <p>Meal-Box for Gym Trainers</p>
-            <button onclick="window.location.href='{{ url_for('meals') }}';">Shop Now</button>
+            <button onclick="window.location.href='{{ url_for('index') }}';">Shop Now</button>
         </div>
 
         <div class="category-card">
